# epigraph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: annotation_sources.yaml  dev_subset.yaml  settings.yaml
docs/: annotation_strategy.md  architecture.md  data_sources.md
schemas/typedb/: functions.tql  schema.tql
src/epigraph/: __init__.py  pipeline.py
src/epigraph/analysis/: __init__.py  aggregate_by_chrom.py  biomarker_candidates.py  cohort_comparison.py  feature_aggregation.py  generate_report.py  hypermethylation.py  pathway_enrichment.py  visualise.py
src/epigraph/common/: __init__.py  chunking.py  genome_coords.py  identifiers.py  io.py  logging.py  parallel.py  paths.py  stats.py
src/epigraph/db_build/: __init__.py  convert_beta_to_parquet.py  create_dev_subset.py  dataset_stats.py  filter_cpgs.py  import_typedb.py  load_clinical_metadata.py  map_cpg_to_genes.py  map_cpg_to_islands.py  parse_annotations.py  parse_betamatrix.py  validate_import.py
tests/: conftest.py  test_biomarker_candidates.py  test_chunked_ingestion.py  test_clinical_extraction.py  test_common_stats.py  test_convert_beta.py  test_coordinate_mapping.py  test_cpg_gene_mapping.py  test_dataset_stats.py  test_dev_subset.py  test_generate_report.py  test_hypermethylation.py  test_identifiers.py  test_map_cpg_to_islands.py  test_parallel.py  test_parse_annotations.py  test_pipeline.py  test_pipeline_filename_conventions.py  test_pipeline_integration.py  test_schema.py  test_visualise.py
